--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
                                 <input type="checkbox" id="stay" style="transform: scale(1.3);">
                                 <label for="stay" class="ml-2 mb-1">Stay Log in</label>
                             </div>
-                            <button class="btn btn-login mt-4">Sign In</button>
+                            <button class="btn btn-login mt-4" onclick="window.location.href='https://pateba-studio.github.io/IsometricLobbyGame-Build/'">Sign In</button>
                         </div>
                     </div>
                     <div class="col-md-6 d-none d-md-block">
